CFLAGS=-c -Wall -O3
AM_LDFLAGS=-lrt -lbcm2835 -lmgl -lmgl-fltk -O3

bin_PROGRAMS = logic_analyzer
logic_analyzer_SOURCES = logic_analyzer.cpp debug.cpp activity.cpp message.cpp transition.cpp binary.cpp logic_input.cpp microwire.cpp raw.cpp protocol.cpp debug.h activity.h message.h transition.h binary.h logic_input.h microwire.h raw.h protocol.h
